--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -3,10 +3,10 @@ name: Greetings Workflow
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   greet-on-push:
